--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,9 @@ name = "securitybot"
 description = "A Discord bot that protects server security"
 version = "0.1.0"
 dependencies = [
-    "discord"
+    "discord.py"
 ]
-requires-python = "3.14.2"
+requires-python = ">=3.14.2"
 readme = "README.md"
 keywords = ["discord", "bot", "security"]
 classifiers = [
