--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,8 @@ name = "securitybot"
 description = "A Discord bot that protects server security"
 version = "0.1.0"
 dependencies = [
-    "discord.py"
+    "discord.py",
+    "python-dotenv"
 ]
 requires-python = ">=3.14.2"
 readme = "README.md"
